--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="theme-color" content="#999999">
         <title>JMC Van Trans</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="dist/assets/img/logo.png"/>
+        <link rel="icon" type="image/x-icon" href="dists/assets/img/logo.png"/>
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -31,7 +31,7 @@
         <nav class="navbar bd-header navbar-expand-lg navbar-light fixed-top py-1" id="mainNav">
             <div class="container px-4 px-lg-5">
                 
-                <a class="navbar-brand" href="#page-top"><img src="dist/assets/img/logo.png" alt="JMC logo" style="
+                <a class="navbar-brand" href="#page-top"><img src="dists/assets/img/logo.png" alt="JMC logo" style="
  max-width: 100%; height: 50px;"></a>
 
                 <div class="navbar-toggler navbar-toggler-right"  data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation" id="navMenu">
