--- a/management-all.html
+++ b/management-all.html
@@ -18,8 +18,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="dist/css/styles.css" rel="stylesheet" />
-        <link href="dist/style.css" rel="stylesheet" />
+        <link href="dists/css/styles.css" rel="stylesheet" />
+        <link href="dists/style.css" rel="stylesheet" />
         <!-- Animation link  -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -94,8 +94,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <!-- Core theme JS-->
-        <script src="dist/js/scripts.js"></script>
-        <script src="dist/script.js"></script>
+        <script src="dists/js/scripts.js"></script>
+        <script src="dists/script.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://smtpjs.com/v3/smtp.js"></script>
