Add queries and update the html and js

--- a/myqueries.html
+++ b/myqueries.html
@@ -45,7 +45,7 @@
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <!-- <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
-                        <li class="nav-item"><a class="nav-link" href="myqueries.html">My Queries</a></li>
+                        <li class="nav-item"><a class="nav-link" href="management-all.html">All Queries</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://c4eru955.caspio.com/folderlogout">Logout</a></li>
                     </ul>
                 </div>
@@ -57,7 +57,7 @@
         <header class="principal">
             <div class="container px-4 px-lg-5 h-100 mt-5">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <script type="text/javascript" src="https://c4eru955.caspio.com/dp/be7a5000e5c13da2dd6849aa8286/emb"></script>
+                    <script type="text/javascript" src="https://c4eru955.caspio.com/dp/be7a5000829365134d6f47799677/emb"></script>
                     <!-- <div class="col-lg-8 align-self-end">
                         <h1 class="text-white font-weight-bold">Hi I am, Wandwilson Almeida</h1>
                         <hr class="divider" />
@@ -97,9 +97,8 @@
         <script src="dists/js/scripts.js"></script>
         <script src="dists/script.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>    
-			
-		
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+       		
        <script>
 			
             AOS.init({
